--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <script>
     function proses() {
-      if (document.getElementsByName("merkHp")[0].checked) {
+      if (document.formPenjualan.merkHp[0].checked) {
         var hargaHp = 1;
       } else if (document.getElementsByName("merkHp")[1].checked) {
         var hargaHp = 2;
